chore: some deprecations fixed
Refs: XRDDEV-2502