@@ -50,7 +50,7 @@ public class ServiceClientIdentifierConverterTest {
     public void convertLocalGroup() throws Exception {
         ServiceClientIdentifierDto dto = converter.convertId("1234");
         assertEquals(true, dto.isLocalGroup());
-        assertEquals(new Long("1234"), dto.getLocalGroupId());
+        assertEquals(Long.valueOf("1234"), dto.getLocalGroupId());
         assertEquals(null, dto.getXRoadId());
     }
 
